# dme22c_funda

./: .gitignore  README.md  pyproject.toml
notebooks/: explanation.html  explanation.qmd  funda.ipynb  pricelist_maarssen.csv  tmp.html
src/: main.py  prices.py  settings.py  tmp.py
