[tool.poetry]
name = "funda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.28.2"
jupyter = "^1.0.0"
pydantic = "^1.10.5"
types-requests = "^2.28.11.14"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
